--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+ body{
+    font-family:sans-serif;
+ }
+
 .container-fluid{
     background-color: rgb(136, 167, 224);
     border-radius: 10px;
@@ -114,6 +118,16 @@ main{
         width: 685px;
         height: 300px;
         border-radius: 10px;
+        font-size: 20px;
+        #det{
+            width: 450px;
+            margin-left: 30px;
+            margin-top: 20px;
+        }
+        img{
+            width: 10rem;
+            height: 10rem;
+        }
     }
     #otherCitiesBox{
         background-color: rgb(168, 191, 235);
@@ -132,6 +146,13 @@ main{
             margin-left: 18px;
             border-radius: 10px;
             box-shadow: 5px 5px 5px rgb(66, 101, 165);
+
+            display: -moz-grid-group;
+            gap: 20px;
+            img{
+            width: 5rem;
+            height: 5rem;
+            }
         }
     }
 
