--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
- body{
+body{
     font-family:sans-serif;
  }
 
@@ -159,4 +159,15 @@ main{
 
 
 
+}
+
+/* Add to your CSS file */
+body.light-mode {
+    background: #f5f5f5;
+    color: #222;
+}
+
+body.dark-mode {
+    background: #222;
+    color: #f5f5f5;
 }
