--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ main{
 
 }
 
-/* Add to your CSS file */
+/* Add to your CSS file
 body.light-mode {
     background: #f5f5f5;
     color: #222;
@@ -170,4 +170,4 @@ body.light-mode {
 body.dark-mode {
     background: #222;
     color: #f5f5f5;
-}
+} */
